--- a/index.css
+++ b/index.css
@@ -59,11 +59,11 @@ a{
     display: inline-block;
     margin-top: 5px;
     margin-bottom: 5px;
-    font-size: 8px;
 }
 
-h5{
+h5 ,a{
     display: inline-block;
     font-size: 10px;
-    margin-top: 5px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
