--- a/index.css
+++ b/index.css
@@ -60,3 +60,10 @@ span{
     margin-top: 5px;
     margin-bottom: 5px;
 }
+
+h5{
+    display: inline-block;
+    font-size: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
