--- a/index.css
+++ b/index.css
@@ -61,9 +61,9 @@ span{
     margin-bottom: 5px;
 }
 
-h5 ,a{
+a{
     display: inline-block;
     font-size: 10px;
-    margin-top: 10px;
+    margin-top: 5px;
     margin-bottom: 10px;
 }
